# bert_ner

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
.chglog/: config.yml
k8s/base/: deployment-api.yaml  deployment-dash.yaml  kustomization.yaml  service-api.yaml  service-dash.yaml
k8s/environments/production/: ingress-api.yaml  ingress-dash.yaml  kustomization.yaml
k8s/environments/test/: ingress-api.yaml  ingress-dash.yaml  kustomization.yaml
resources/: email_router_infrastructure.drawio
src/: app.py  app_dash.py  settings.py  train.py
src/dashboard/: attribution.py  dash_utils.py  graphs.py  performance_data.py
src/model/: bert.py  model_utils.py  text_utils.py
src/utils/: data_utils.py  eval_utils.py  sql_utils.py  utils.py
src/utils/resources/: transfertable.csv  transfertable_mod.csv
tests/: app_test.py  conftest.py
tests/model/: bert_test.py
tests/utils/: data_utils_test.py  eval_utils_test.py
